--- a/MotivCookies/package.json
+++ b/MotivCookies/package.json
@@ -15,6 +15,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1"
   },
