--- a/MotivCookies/package.json
+++ b/MotivCookies/package.json
@@ -18,6 +18,7 @@
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
